# mini-Unicorn

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  core_agent_lines.sh  docker-compose.yml  entrypoint.sh  hatch_build.py  pyproject.toml
.agent/: gotchas.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agents/: test-writer.md
docs/: README.md  agent-social-network.md  channel-plugin-guide.md  chat-apps.md  chat-commands.md  cli-reference.md  configuration.md  deployment.md  image-generation.md  memory.md  multiple-instances.md  my-tool.md  openai-api.md  python-sdk.md  quick-start.md  web-search-html-robustness-plan.md  websocket.md
miniUnicorn/: __init__.py  __main__.py  miniUnicorn.py
miniUnicorn/agent/: __init__.py  _mcp_lifecycle.py  _provider_switching.py  _state_machine.py  agent_generator.py  autocompact.py  context.py  context_governor.py  hook.py  loop.py  loop_builder.py  memory.py  model_presets.py  planner.py  progress_hook.py  reflection.py  runner.py  runner_strategies.py  skills.py  subagent.py  subagent_registry.py  turn_budget.py  vector_memory.py
miniUnicorn/api/: __init__.py  routes_agents.py  server.py
miniUnicorn/apps/: __init__.py
miniUnicorn/bus/: __init__.py  events.py  queue.py
miniUnicorn/channels/: __init__.py  _media_common.py  base.py  dingtalk.py  feishu.py  manager.py  qq.py  registry.py  websocket.py  wecom.py  weixin.py
miniUnicorn/cli/: __init__.py  _gateway_runner.py  _heartbeat.py  _terminal_render.py  commands.py  models.py  onboard.py  stream.py
miniUnicorn/command/: __init__.py  builtin.py  router.py
miniUnicorn/config/: __init__.py  loader.py  paths.py  schema.py
miniUnicorn/cron/: __init__.py  service.py  types.py
miniUnicorn/pairing/: __init__.py  store.py
miniUnicorn/providers/: __init__.py  base.py  embedding.py  factory.py  fallback_provider.py  openai_compat_provider.py  registry.py  transcription.py
miniUnicorn/security/: network.py  workspace_access.py  workspace_policy.py
miniUnicorn/session/: __init__.py  goal_state.py  manager.py  webui_turns.py
miniUnicorn/skills/: README.md
miniUnicorn/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  USER.md
miniUnicorn/utils/: __init__.py  artifacts.py  document.py  evaluator.py  gitstore.py  helpers.py  llm_runtime.py  logging_bridge.py  media_decode.py  progress_events.py  prompt_templates.py  restart.py  runtime.py  tool_hints.py
miniUnicorn/webui/: _helpers.py  _payload.py  _runtime.py  _updates.py  channels_api.py  cli_apps_api.py  cron_api.py  mcp_presets_api.py  mcp_presets_data.json  mcp_presets_runtime.py  media_api.py  qrcode_auth_handler.py  settings_api.py  sidebar_state.py  thread_disk.py  tools_api.py  transcript.py  workspaces.py
munchkin/: __init__.py  __main__.py  munchkin.py
munchkin/agent/: __init__.py  autocompact.py  context.py  hook.py  loop.py  memory.py  model_presets.py  progress_hook.py  runner.py  skills.py  subagent.py
munchkin/api/: __init__.py  server.py
munchkin/apps/: __init__.py
munchkin/bus/: __init__.py  queue.py
munchkin/channels/: __init__.py  base.py  manager.py  registry.py  websocket.py
munchkin/cli/: __init__.py  commands.py  onboard.py  stream.py
munchkin/command/: __init__.py  builtin.py  router.py
munchkin/config/: __init__.py  loader.py  paths.py  schema.py
munchkin/cron/: __init__.py  service.py
munchkin/pairing/: __init__.py  store.py
munchkin/providers/: __init__.py  base.py  factory.py  fallback_provider.py  openai_compat_provider.py  registry.py
munchkin/skills/: README.md
nanobot-workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  USER.md
tests/: test_api_attachment.py  test_api_stream.py  test_build_status.py  test_context_documents.py  test_docker.sh  test_document_parsing.py  test_miniUnicorn_facade.py  test_msteams.py  test_munchkin_facade.py  test_openai_api.py  test_package_version.py  test_tool_contextvars.py  test_truncate_text_shadowing.py
webui/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+533 files in other folders)
